syntax="proto2";

import "SensorTypeEnum.proto";

package aasdk.proto.messages;

message SensorStartRequestMessage
{
  required enums.SensorType.Enum sensor_type = 1;
  required int64 refresh_interval = 2;
}

option optimize_for = SPEED;
