syntax="proto2";

import "StatusEnum.proto";

package aasdk.proto.messages;

message SensorStartResponseMessage
{
  required enums.Status.Enum status = 1;
}

option optimize_for = SPEED;
